--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_config
   - data: nli4ct
-  - dataloader: defaults
+  - dataloader: baseline
   - model: clinical_llama
   - optimizer: adamw
   - lr_scheduler: warmup_linear_decay
