--- a/configs/dataloader/baseline.yaml
+++ b/configs/dataloader/baseline.yaml
@@ -2,7 +2,8 @@ defaults:
   - base_dataloader_config
 
 dataset_loader: BaselineDataset
-batch_size: 16
-num_workers: 8
-drop_last: false
-pin_memory: false
+configs:
+  batch_size: 16
+  num_workers: 8
+  drop_last: false
+  pin_memory: false
