--- a/environment.yaml
+++ b/environment.yaml
@@ -1,14 +1,19 @@
 name: semeval_nli4ct
 channels:
-  - defaults
+  - pytorch
+  - nvidia
+  - huggingface
   - conda-forge
-  - pyg
+  - defaults
 dependencies:
   - python=3.10
   - hydra-core
   - huggingface_hub
+  - pytorch
+  - torchvision
+  - torchaudio
+  - cudatoolkit=11.4
   - datasets
-  - transformers
   - evaluate
   - pip
   - python-dotenv
@@ -23,3 +28,10 @@ dependencies:
   - pandas
   - tqdm
   - pynvml
+  - pip:
+    - deepspeed
+    - peft
+    - tokenizers==0.15.0
+    - transformers==4.35.2
+    - pydantic==1.10.12  
+    - info-nce-pytorch
