--- a/configs/data/nli4ct_practice.yaml
+++ b/configs/data/nli4ct_practice.yaml
@@ -4,5 +4,6 @@ defaults:
 data_dir: data
 train_data_filename: train.json
 valid_data_filename: dev.json
+test_data_filename: practice_test.json
 claims_dir: CT json
 max_length: 4096
