--- a/configs/experiment/biolinkbert.yaml
+++ b/configs/experiment/biolinkbert.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /model: biolinkbert
-  - override /data: nli4ct
+  - override /data: nli4ct_practice
   - override /lr_scheduler: warmup_linear_decay
   - override /optimizer: adamw
 
