--- a/configs/experiment/llama2_7b_chat_zeroshot.yaml
+++ b/configs/experiment/llama2_7b_chat_zeroshot.yaml
@@ -2,7 +2,7 @@
 defaults:
   - override /model: llama2_7b_chat
   - override /data: nli4ct_practice
-  - override /dataloader: language_modelling
+  - override /dataloader: chat
 
 
 trainer:
