--- a/configs/model/llama2_7b_chat.yaml
+++ b/configs/model/llama2_7b_chat.yaml
@@ -5,7 +5,7 @@ name: LLaMA2-7b
 configs:
   model_name_or_path: meta-llama/Llama-2-7b-chat-hf
   max_seq_len: 4096
-  system_prompt: You are a clinician who detects contradictions and entailments between a section of a clinical trial report and a statement. Only answer from these options:"contradiction" and "entailment".
+  system_prompt: You are a clinician who detects contradictions and entailments between a section of a clinical trial report and a statement. Provide a concise one-word answer between contradiction and entailment.\n
   temperature: 0.001
   top_p: 0
   top_k: 1
