--- a/configs/experiment/llama2_7b_zeroshot.yaml
+++ b/configs/experiment/llama2_7b_zeroshot.yaml
@@ -1,11 +1,11 @@
 # @package _global_
 defaults:
-  - override /model: mistral_7b
+  - override /model: llama2_7b
   - override /data: nli4ct_practice
   - override /dataloader: chat
 
 
 trainer:
-  experiment_name: mistral_7b
+  experiment_name: llama2_7b
   epochs: 0
   gradient_accumulation_steps: 0
