--- a/configs/experiment/zero_shot/llama2_7b.yaml
+++ b/configs/experiment/zero_shot/llama2_7b.yaml
@@ -3,9 +3,4 @@ defaults:
   - override /model: llama2_7b
   - override /data: nli4ct_practice
   - override /dataloader: chat
-
-
-trainer:
-  experiment_name: llama2_7b
-  epochs: 0
-  gradient_accumulation_steps: 0
+  - override /trainer: zero_shot
