--- a/configs/experiment/zero_shot/llama2_7b_chat.yaml
+++ b/configs/experiment/zero_shot/llama2_7b_chat.yaml
@@ -3,8 +3,4 @@ defaults:
   - override /model: llama2_7b_chat
   - override /data: nli4ct_practice
   - override /dataloader: chat
-
-trainer:
-  experiment_name: llama2_7b_chat_zeroshot
-  epochs: 0
-  gradient_accumulation_steps: 0
+  - override /trainer: zero_shot
