--- a/k8s_runs/zeroshot.yaml
+++ b/k8s_runs/zeroshot.yaml
@@ -20,17 +20,17 @@ image: aryopg/nli4ct:latest
 runs:
   - experiment: zero_shot/llama2_7b_chat
     gpu_product: NVIDIA-A100-SXM4-40GB
-  - experiment: zero_shot/llama2_7b
-    gpu_product: NVIDIA-A100-SXM4-40GB
   - experiment: zero_shot/llama2_13b_chat
     gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: zero_shot/llama2_13b
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: zero_shot/mistral_7b
-    gpu_product: NVIDIA-A100-SXM4-40GB
   - experiment: zero_shot/mistral_7b_instruct
     gpu_product: NVIDIA-A100-SXM4-40GB
-  - experiment: zero_shot/mistrallite_7b
-    gpu_product: NVIDIA-A100-SXM4-40GB
-  - experiment: zero_shot/meditron_7b
-    gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: zero_shot/llama2_7b
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: zero_shot/llama2_13b
+  #   gpu_product: NVIDIA-A100-SXM4-80GB
+  # - experiment: zero_shot/mistral_7b
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: zero_shot/mistrallite_7b
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: zero_shot/meditron_7b
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
