Check if different prompt fixes the causal LM problem

--- a/configs/dataloader/causal_lm.yaml
+++ b/configs/dataloader/causal_lm.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_dataloader_config
 
-dataset_loader: LanguageModellingDataset
+dataset_loader: CausalLMDataset
 configs:
   batch_size: 1
   num_workers: 8
