--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -6,7 +6,7 @@ defaults:
   - optimizer: adamw
   - lr_scheduler: warmup_linear_decay
   - trainer: fine_tune
-  - retriever: null
+  - retriever: bm25
   - experiment: null
   - _self_
 
