--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -7,6 +7,7 @@ defaults:
   - lr_scheduler: warmup_linear_decay
   - trainer: fine_tune
   - retriever: bm25
+  - instruction: instruction_11
   - experiment: null
   - _self_
 
