--- a/configs/experiment/zero_shot/mistral_7b.yaml
+++ b/configs/experiment/zero_shot/mistral_7b.yaml
@@ -2,5 +2,5 @@
 defaults:
   - override /model: mistral_7b
   - override /data: nli4ct_practice
-  - override /dataloader: causal_lm
+  - override /dataloader: chat
   - override /trainer: zero_shot
