--- a/configs/instruction/instruction_3.yaml
+++ b/configs/instruction/instruction_3.yaml
@@ -1,4 +1,4 @@
 defaults:
   - base_instruction_config
 
-instruction_template: "{evidence} Can we draw the following conclusion? {statement}\nOPTIONS:\n- Contradiction\n- Entailment\nAnswer: "
+instruction_template: "{icl_example}{evidence} Can we draw the following conclusion? {statement}\nOPTIONS:\n- Contradiction\n- Entailment\nAnswer: "
