--- a/configs/instruction/instruction_6.yaml
+++ b/configs/instruction/instruction_6.yaml
@@ -1,4 +1,4 @@
 defaults:
   - base_instruction_config
 
-instruction_template: "Read the following paragraph and determine if the hypothesis is true: {evidence} Hypothesis: {statement}\nOPTIONS:\n- Contradiction\n- Entailment\nAnswer: "
+instruction_template: "{icl_example}Read the following paragraph and determine if the hypothesis is true: {evidence} Hypothesis: {statement}\nOPTIONS:\n- Contradiction\n- Entailment\nAnswer: "
