--- a/configs/instruction/instruction_8.yaml
+++ b/configs/instruction/instruction_8.yaml
@@ -1,4 +1,4 @@
 defaults:
   - base_instruction_config
 
-instruction_template: "Can we draw the following hypothesis from the context? Context: {evidence} Hypothesis: {statement}\nOPTIONS:\n- Contradiction\n- Entailment\nAnswer: "
+instruction_template: "{icl_example}Can we draw the following hypothesis from the context? Context: {evidence} Hypothesis: {statement}\nOPTIONS:\n- Contradiction\n- Entailment\nAnswer: "
