--- a/configs/experiment/one_shot/meditron_7b.yaml
+++ b/configs/experiment/one_shot/meditron_7b.yaml
@@ -3,4 +3,4 @@ defaults:
   - override /model: meditron_7b
   - override /data: nli4ct_practice
   - override /dataloader: chat
-  - override /trainer: one_shot_bm25
+  - override /trainer: one_shot
