--- a/configs/experiment/two_shot/llama2_13b_chat.yaml
+++ b/configs/experiment/two_shot/llama2_13b_chat.yaml
@@ -3,4 +3,4 @@ defaults:
   - override /model: llama2_13b_chat
   - override /data: nli4ct_practice
   - override /dataloader: chat
-  - override /trainer: two_shot_bm25
+  - override /trainer: two_shot
