--- a/configs/experiment/two_shot/mistral_7b_instruct.yaml
+++ b/configs/experiment/two_shot/mistral_7b_instruct.yaml
@@ -3,4 +3,4 @@ defaults:
   - override /model: mistral_7b_instruct
   - override /data: nli4ct_practice
   - override /dataloader: chat
-  - override /trainer: two_shot_bm25
+  - override /trainer: two_shot
