--- a/configs/experiment/two_shot/mistrallite_7b.yaml
+++ b/configs/experiment/two_shot/mistrallite_7b.yaml
@@ -3,4 +3,4 @@ defaults:
   - override /model: mistrallite_7b
   - override /data: nli4ct_practice
   - override /dataloader: chat
-  - override /trainer: two_shot_bm25
+  - override /trainer: two_shot
