--- a/configs/retriever/bm25_length_penalty.yaml
+++ b/configs/retriever/bm25_length_penalty.yaml
@@ -2,6 +2,7 @@ defaults:
   - base_retriever_config
 
 name: CTRBM25OkapiLengthPenalty
+icl_examples_dir: in_context_examples/bm25_length_penalty
 configs:
   k1: 1.5
   b: 0.75
