icl runs on kubernetes

--- a/k8s_runs/one_shot.yaml
+++ b/k8s_runs/one_shot.yaml
@@ -26,19 +26,25 @@ runs:
     gpu_product: NVIDIA-A100-SXM4-80GB
   - experiment: one_shot/mistral_7b_instruct retriever=bm25_biolinkbert_reranker
     gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: one_shot/llama_7b_chat retriever=bm25
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: one_shot/llama_7b_chat retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: one_shot/llama_7b_chat retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: one_shot/llama_7b_chat retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: one_shot/llama_13b_chat retriever=bm25
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: one_shot/llama_13b_chat retriever=bm25_length_penalty
-  #     gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: one_shot/llama_13b_chat retriever=bm25_contriever_reranker
-  #     gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: one_shot/llama_13b_chat retriever=bm25_biolinkbert_reranker
-  #     gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/mistral_7b_instruct retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_7b_chat retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_7b_chat retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_7b_chat retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_7b_chat retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_13b_chat retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_13b_chat retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_13b_chat retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/llama_13b_chat retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
