--- a/k8s_runs/one_shot.yaml
+++ b/k8s_runs/one_shot.yaml
@@ -48,3 +48,13 @@ runs:
     gpu_product: NVIDIA-A100-SXM4-80GB
   - experiment: one_shot/llama2_13b_chat retriever=bm25_pubmedbert_reranker
     gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/mistrallite_7b retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/mistrallite_7b retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/mistrallite_7b retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: one_shot/mistrallite_7b retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-80GB
