k8s runs for fine tuning experiments

--- a/k8s_runs/fine_tune.yaml
+++ b/k8s_runs/fine_tune.yaml
@@ -18,8 +18,8 @@ env_vars:
     key: aryo-hf-username
 image: aryopg/nli4ct:latest
 runs:
-  - experiment: fine_tune/mistral_7b_instruct
-    gpu_product: NVIDIA-A100-SXM4-80GB
+  # - experiment: fine_tune/mistral_7b_instruct
+  #   gpu_product: NVIDIA-A100-SXM4-80GB
   - experiment: fine_tune/llama2_7b_chat
     gpu_product: NVIDIA-A100-SXM4-80GB
   - experiment: fine_tune/llama2_13b_chat
