--- a/configs/trainer/fine_tune.yaml
+++ b/configs/trainer/fine_tune.yaml
@@ -5,6 +5,7 @@ name: fine_tune
 configs:
   epochs: 10
   gradient_accumulation_steps: 32
+  max_train_seq_len: 2048  # The maximum seq length to use for training in 1x80GB GPU
   lora_configs:
     r: 16
     lora_alpha: 32
