late fusion experiment 1 by 1 example

--- a/configs/trainer/8_shot.yaml
+++ b/configs/trainer/8_shot.yaml
@@ -7,3 +7,4 @@ configs:
   gradient_accumulation_steps: 0
   query_corpus_filename: data/train_2023.json
   num_in_context_examples: 8
+  fusion_strategy: early
