--- a/configs/trainer/late_6_shot.yaml
+++ b/configs/trainer/late_6_shot.yaml
@@ -7,4 +7,4 @@ configs:
   gradient_accumulation_steps: 0
   query_corpus_filename: data/train_2023.json
   num_in_context_examples: 6
-  fusion_strategy: early
+  fusion_strategy: late
