late fusion baseline with 1 on 1 integration

--- a/configs/trainer/late_4_shot.yaml
+++ b/configs/trainer/late_4_shot.yaml
@@ -1,10 +1,10 @@
 defaults:
   - base_trainer_config
 
-name: icl_4_shot
+name: late_fusion_icl_4_shot
 configs:
   epochs: 0
   gradient_accumulation_steps: 0
-  query_corpus_filename: data/train_2023.json
+  query_corpus_filename: data/train.json
   num_in_context_examples: 4
   fusion_strategy: late
