--- a/configs/trainer/4_shot.yaml
+++ b/configs/trainer/4_shot.yaml
@@ -5,6 +5,6 @@ name: icl_4_shot
 configs:
   epochs: 0
   gradient_accumulation_steps: 0
-  query_corpus_filename: data/train_2023.json
+  query_corpus_filename: data/train.json
   num_in_context_examples: 4
   fusion_strategy: early
