late fusion rename to allow correct treatment dependant on icl prefix

--- a/configs/trainer/late_4_shot.yaml
+++ b/configs/trainer/late_4_shot.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_trainer_config
 
-name: late_fusion_icl_4_shot
+name: icl_late_fusion_4_shot
 configs:
   epochs: 0
   gradient_accumulation_steps: 0
