--- a/configs/trainer/late_coupled_4_shot.yaml
+++ b/configs/trainer/late_coupled_4_shot.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_trainer_config
 
-name: icl_late_fusion_4_shot
+name: icl_late_coupled_fusion_4_shot
 configs:
   epochs: 0
   gradient_accumulation_steps: 0
