CoT zero shot experiments

--- a/configs/instruction/instruction_9.yaml
+++ b/configs/instruction/instruction_9.yaml
@@ -1,4 +1,4 @@
 defaults:
   - base_instruction_config
 
-instruction_template: "{icl_example}Determine if the sentence is true based on the text below: {statement} {evidence}\nOPTIONS:\n- Contradiction\n- Entailment\nAnswer: "
+instruction_template: "{icl_example}Determine if the sentence is true based on the text below: {statement} {evidence}\nOPTIONS:\n- Contradiction\n- Entailment\n{cot_prompt}\nAnswer: "
