--- a/configs/experiment/cot_0_shot/llama2_7b_chat.yaml
+++ b/configs/experiment/cot_0_shot/llama2_7b_chat.yaml
@@ -4,3 +4,5 @@ defaults:
   - override /data: nli4ct_practice
   - override /dataloader: chat
   - override /trainer: cot_0_shot
+  - override /instruction: instruction_0_cot
+  - override /instruction: instruction_0_cot
