--- a/configs/model/llama2_70b_chat.yaml
+++ b/configs/model/llama2_70b_chat.yaml
@@ -1,10 +1,10 @@
 defaults:
   - base_model_config
 
-name: Mistral-7b-Instruct
+name: LLaMA2-70b-chat
 pipeline: ChatModelPipeline
 configs:
-  model_name_or_path: mistralai/Mistral-7B-Instruct-v0.1
+  model_name_or_path: meta-llama/Llama-2-70b-chat-hf
   max_seq_len: 4096
   system_prompt: You are a clinician who check if there is a contradiction or an entailment between a section of a clinical trial report and a statement.
   temperature: 0.001
