fine tune contrastive as a separate trainer

--- a/configs/experiment/fine_tune_contrastive/mistral_7b_instruct.yaml
+++ b/configs/experiment/fine_tune_contrastive/mistral_7b_instruct.yaml
@@ -3,4 +3,4 @@ defaults:
   - override /model: mistral_7b_instruct
   - override /data: nli4ct_contrastive
   - override /dataloader: chat
-  - override /trainer: fine_tune
+  - override /trainer: fine_tune_contrastive
