--- a/configs/experiment/fine_tune_contrastive/llama2_13b_chat.yaml
+++ b/configs/experiment/fine_tune_contrastive/llama2_13b_chat.yaml
@@ -3,4 +3,4 @@ defaults:
   - override /model: llama2_13b_chat
   - override /data: nli4ct_contrastive
   - override /dataloader: chat
-  - override /trainer: fine_tune
+  - override /trainer: fine_tune_contrastive
