--- a/configs/experiment/fine_tune_contrastive/meditron_7b.yaml
+++ b/configs/experiment/fine_tune_contrastive/meditron_7b.yaml
@@ -3,4 +3,4 @@ defaults:
   - override /model: meditron_7b
   - override /data: nli4ct_contrastive
   - override /dataloader: chat
-  - override /trainer: fine_tune
+  - override /trainer: fine_tune_contrastive
