--- a/configs/trainer/cot_late_4_shot.yaml
+++ b/configs/trainer/cot_late_4_shot.yaml
@@ -9,3 +9,4 @@ configs:
   num_in_context_examples: 4
   fusion_strategy: late
   cot_prompt: "Let's think step by step"
+  explicit_evidence: False
