--- a/configs/experiment/2_shot_explicit/meditron_7b.yaml
+++ b/configs/experiment/2_shot_explicit/meditron_7b.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 defaults:
-  - override /model: llama2_7b
+  - override /model: meditron_7b
   - override /data: nli4ct
   - override /dataloader: chat
-  - override /trainer: 0_shot
+  - override /trainer: 2_shot_explicit
