--- a/configs/experiment/2_shot_explicit/mistral_7b_instruct.yaml
+++ b/configs/experiment/2_shot_explicit/mistral_7b_instruct.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 defaults:
-  - override /model: llama2_13b
+  - override /model: mistral_7b_instruct
   - override /data: nli4ct
   - override /dataloader: chat
-  - override /trainer: 0_shot
+  - override /trainer: 2_shot_explicit
