--- a/configs/trainer/0_shot_explicit.yaml
+++ b/configs/trainer/0_shot_explicit.yaml
@@ -1,9 +1,9 @@
 defaults:
   - base_trainer_config
 
-name: 0_shot
+name: 0_shot_explicit
 configs:
   epochs: 0
   gradient_accumulation_steps: 0
   fusion_strategy: ""
-  explicit_evidence: False
+  explicit_evidence: True
