--- a/configs/trainer/2_shot_explicit.yaml
+++ b/configs/trainer/2_shot_explicit.yaml
@@ -1,10 +1,11 @@
 defaults:
   - base_trainer_config
 
-name: icl_4_shot
+name: icl_2_shot
 configs:
   epochs: 0
   gradient_accumulation_steps: 0
   query_corpus_filename: data/train.json
-  num_in_context_examples: 4
+  num_in_context_examples: 2
   fusion_strategy: early
+  explicit_evidence: True
