--- a/configs/trainer/fine_tune.yaml
+++ b/configs/trainer/fine_tune.yaml
@@ -7,6 +7,7 @@ configs:
   gradient_accumulation_steps: 32
   max_train_seq_len: 2048  # The maximum seq length to use for training in 1x80GB GPU
   fusion_strategy: ""
+  explicit_evidence: False
   lora_configs:
     r: 16
     lora_alpha: 32
