--- a/configs/trainer/fine_tune_explicit.yaml
+++ b/configs/trainer/fine_tune_explicit.yaml
@@ -1,14 +1,13 @@
 defaults:
   - base_trainer_config
 
-# Exact same as fine tune, except this used contrastive samples
-name: fine_tune_contrastive
+name: fine_tune
 configs:
   epochs: 10
   gradient_accumulation_steps: 32
   max_train_seq_len: 2048  # The maximum seq length to use for training in 1x80GB GPU
   fusion_strategy: ""
-  explicit_evidence: False
+  explicit_evidence: True
   lora_configs:
     r: 16
     lora_alpha: 32
