--- a/configs/trainer/2_shot_explicit.yaml
+++ b/configs/trainer/2_shot_explicit.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_trainer_config
 
-name: icl_2_shot
+name: icl_2_shot_explicit
 configs:
   epochs: 0
   gradient_accumulation_steps: 0
